# ArchitectureInfo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml
